<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item
        android:id="@+id/home"
        android:title="@string/home"
        android:orderInCategory="100"
        app:showAsAction="never" />-->
    <item
        android:id="@+id/help"
        android:title="@string/help"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/feedback"
        android:title="@string/feedback"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/appinfo"
        android:title="@string/app_info"
        android:orderInCategory="100"
        app:showAsAction="never" />


</menu>