<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Feedback"
    android:background="@color/colorAccent">


    <include android:id="@+id/toolb"
        layout="@layout/toolbar"/>

    <EditText
        android:id="@+id/helpemail"
        android:layout_width="304dp"
        android:layout_height="66dp"
        android:ems="10"
        android:hint="@string/e_mail_id"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168" />

    <Button
        android:id="@+id/button"
        android:layout_width="126dp"
        android:layout_height="69dp"
        android:layout_marginBottom="116dp"
        android:onClick="sendMessage"
        android:text="@string/send"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/leaveMessage"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/leaveMessage"
        app:layout_constraintTop_toBottomOf="@+id/leaveMessage"
        app:layout_constraintVertical_bias="0.927" />

    <EditText
        android:id="@+id/leaveMessage"
        android:layout_width="305dp"
        android:layout_height="269dp"
        android:layout_marginBottom="240dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/leave_product_feedback_or_share_your_ideas"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/helpemail"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/helpemail" />
</androidx.constraintlayout.widget.ConstraintLayout>